# wordlesolver

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  Taskfile.yml  __init__.py  environment-cpu.yml  environment.yml  main.py  pyproject.toml  train.py
.github/workflows/: ci.yml
tests/data/: __init__.py  test_answers.py  test_word_filter.py
tests/generator/: test_fake_generator.py  test_generator.py  test_real_generator.py  test_word_filter.py
tests/solver/: test_filter.py
wordlesolver/: __init__.py
wordlesolver/data/: __init__.py  answers.py  answers.txt  letter_validity.py  word_filter.py  words.py
wordlesolver/generator/: __init__.py  fake_generator.py  generator.py  real_generator.py  word_filter.py
wordlesolver/generator/wrappers/: __init__.py  action_observation_wrapper.py  int_wrapper.py  previous_action_wrapper.py
wordlesolver/response/: __init__.py  game_status.py  letter_validity.py  response.py
wordlesolver/solver/: __init__.py  character_counting_filter.py  dqn_solver.py  filter.py  maximise_matches_solver.py  ppo_solver.py  save_callback.py  solver.py
