[tool.poetry]
name = "wordlesolver"
version = "0.1.0"
description = ""
authors = ["Mikhail Datoo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mdatoo/wordlesolver"

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
tqdm = "^4.64.1"
keras-rl = "^0.4.2"
pytest-playwright = "^0.3.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
pylint = "^2.15.6"
pytest = "^7.2.0"
types-requests = "^2.28.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
